added additionalJOption